@@ -47,7 +47,9 @@ if [ "$(omv_config_get "//services/kerberos/enable")" = "1" ]; then
 		-n \
 		-o "[realms]" -n \
 		-o "	" -v "concat(realm, ' = {')" -n \
-		-o "		" -v "concat('kdc = ', kdc)" -n \
+		-m "kdcs/kdc" \
+		-o "		" -v "concat('kdc = ', .)" -n -b \
+		-m "//services/kerberos" \
 		-o "		" -v "concat('admin_server = ', adminServer)" -n \
 		-o "		" -v "concat('default_domain = ', realm)" -n \
 		-o "	}" -n \
