@@ -3,8 +3,9 @@ openmediavault-kerberos (0.1.4) testing; urgency=low
   [ Ilya Kogan ]
   * Fix NFS export flags getting duplicated and never removed both
     when the plugin is deactivated and when uninstalled.
+  * Add support for multiple KDCs by allow comma separation in the KDC field.
 
- -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 22:30:45 -0500
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 05 Jan 2016 19:30:45 -0500
 
 openmediavault-kerberos (0.1.3) testing; urgency=low
 
